@@ -7799,6 +7799,197 @@ r_goto
 id|done
 suffix:semicolon
 )brace
+multiline_comment|/*&n; * Commence writeout of all the buffers against a page.  The&n; * page must be locked.   Returns zero on success or a negative&n; * errno.&n; */
+DECL|function|writeout_one_page
+r_int
+id|writeout_one_page
+c_func
+(paren
+r_struct
+id|page
+op_star
+id|page
+)paren
+(brace
+r_struct
+id|buffer_head
+op_star
+id|bh
+comma
+op_star
+id|head
+op_assign
+id|page-&gt;buffers
+suffix:semicolon
+r_if
+c_cond
+(paren
+op_logical_neg
+id|PageLocked
+c_func
+(paren
+id|page
+)paren
+)paren
+id|BUG
+c_func
+(paren
+)paren
+suffix:semicolon
+id|bh
+op_assign
+id|head
+suffix:semicolon
+r_do
+(brace
+r_if
+c_cond
+(paren
+id|buffer_locked
+c_func
+(paren
+id|bh
+)paren
+op_logical_or
+op_logical_neg
+id|buffer_dirty
+c_func
+(paren
+id|bh
+)paren
+op_logical_or
+op_logical_neg
+id|buffer_uptodate
+c_func
+(paren
+id|bh
+)paren
+)paren
+r_continue
+suffix:semicolon
+id|bh-&gt;b_flushtime
+op_assign
+id|jiffies
+suffix:semicolon
+id|ll_rw_block
+c_func
+(paren
+id|WRITE
+comma
+l_int|1
+comma
+op_amp
+id|bh
+)paren
+suffix:semicolon
+)brace
+r_while
+c_loop
+(paren
+(paren
+id|bh
+op_assign
+id|bh-&gt;b_this_page
+)paren
+op_ne
+id|head
+)paren
+suffix:semicolon
+r_return
+l_int|0
+suffix:semicolon
+)brace
+DECL|variable|writeout_one_page
+id|EXPORT_SYMBOL
+c_func
+(paren
+id|writeout_one_page
+)paren
+suffix:semicolon
+multiline_comment|/*&n; * Wait for completion of I/O of all buffers against a page.  The page&n; * must be locked.  Returns zero on success or a negative errno.&n; */
+DECL|function|waitfor_one_page
+r_int
+id|waitfor_one_page
+c_func
+(paren
+r_struct
+id|page
+op_star
+id|page
+)paren
+(brace
+r_int
+id|error
+op_assign
+l_int|0
+suffix:semicolon
+r_struct
+id|buffer_head
+op_star
+id|bh
+comma
+op_star
+id|head
+op_assign
+id|page-&gt;buffers
+suffix:semicolon
+id|bh
+op_assign
+id|head
+suffix:semicolon
+r_do
+(brace
+id|wait_on_buffer
+c_func
+(paren
+id|bh
+)paren
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|buffer_req
+c_func
+(paren
+id|bh
+)paren
+op_logical_and
+op_logical_neg
+id|buffer_uptodate
+c_func
+(paren
+id|bh
+)paren
+)paren
+id|error
+op_assign
+op_minus
+id|EIO
+suffix:semicolon
+)brace
+r_while
+c_loop
+(paren
+(paren
+id|bh
+op_assign
+id|bh-&gt;b_this_page
+)paren
+op_ne
+id|head
+)paren
+suffix:semicolon
+r_return
+id|error
+suffix:semicolon
+)brace
+DECL|variable|waitfor_one_page
+id|EXPORT_SYMBOL
+c_func
+(paren
+id|waitfor_one_page
+)paren
+suffix:semicolon
 DECL|function|generic_block_bmap
 id|sector_t
 id|generic_block_bmap
