@@ -135,7 +135,19 @@ c_func
 id|dir
 )paren
 )paren
+(brace
+r_int
+id|err2
+suffix:semicolon
 id|err
+op_assign
+id|writeout_one_page
+c_func
+(paren
+id|page
+)paren
+suffix:semicolon
+id|err2
 op_assign
 id|waitfor_one_page
 c_func
@@ -143,6 +155,18 @@ c_func
 id|page
 )paren
 suffix:semicolon
+r_if
+c_cond
+(paren
+id|err
+op_eq
+l_int|0
+)paren
+id|err
+op_assign
+id|err2
+suffix:semicolon
+)brace
 r_return
 id|err
 suffix:semicolon
