@@ -153,7 +153,19 @@ c_func
 id|dir
 )paren
 )paren
+(brace
+r_int
+id|err2
+suffix:semicolon
 id|err
+op_assign
+id|writeout_one_page
+c_func
+(paren
+id|page
+)paren
+suffix:semicolon
+id|err2
 op_assign
 id|waitfor_one_page
 c_func
@@ -161,6 +173,18 @@ c_func
 id|page
 )paren
 suffix:semicolon
+r_if
+c_cond
+(paren
+id|err
+op_eq
+l_int|0
+)paren
+id|err
+op_assign
+id|err2
+suffix:semicolon
+)brace
 r_return
 id|err
 suffix:semicolon
@@ -1340,12 +1364,10 @@ r_if
 c_cond
 (paren
 id|err
+op_eq
+l_int|0
 )paren
-id|BUG
-c_func
-(paren
-)paren
-suffix:semicolon
+(brace
 id|de-&gt;inode
 op_assign
 l_int|0
@@ -1362,6 +1384,7 @@ comma
 id|to
 )paren
 suffix:semicolon
+)brace
 id|UnlockPage
 c_func
 (paren
@@ -1900,12 +1923,10 @@ r_if
 c_cond
 (paren
 id|err
+op_eq
+l_int|0
 )paren
-id|BUG
-c_func
-(paren
-)paren
-suffix:semicolon
+(brace
 id|de-&gt;inode
 op_assign
 id|inode-&gt;i_ino
@@ -1922,6 +1943,7 @@ comma
 id|to
 )paren
 suffix:semicolon
+)brace
 id|UnlockPage
 c_func
 (paren
