@@ -1712,168 +1712,6 @@ r_return
 id|page
 suffix:semicolon
 )brace
-multiline_comment|/*&n; * By the time this is called, the page is locked and&n; * we don&squot;t have to worry about any races any more.&n; *&n; * Start the IO..&n; */
-DECL|function|writeout_one_page
-r_static
-r_int
-id|writeout_one_page
-c_func
-(paren
-r_struct
-id|page
-op_star
-id|page
-)paren
-(brace
-r_struct
-id|buffer_head
-op_star
-id|bh
-comma
-op_star
-id|head
-op_assign
-id|page-&gt;buffers
-suffix:semicolon
-id|bh
-op_assign
-id|head
-suffix:semicolon
-r_do
-(brace
-r_if
-c_cond
-(paren
-id|buffer_locked
-c_func
-(paren
-id|bh
-)paren
-op_logical_or
-op_logical_neg
-id|buffer_dirty
-c_func
-(paren
-id|bh
-)paren
-op_logical_or
-op_logical_neg
-id|buffer_uptodate
-c_func
-(paren
-id|bh
-)paren
-)paren
-r_continue
-suffix:semicolon
-id|bh-&gt;b_flushtime
-op_assign
-id|jiffies
-suffix:semicolon
-id|ll_rw_block
-c_func
-(paren
-id|WRITE
-comma
-l_int|1
-comma
-op_amp
-id|bh
-)paren
-suffix:semicolon
-)brace
-r_while
-c_loop
-(paren
-(paren
-id|bh
-op_assign
-id|bh-&gt;b_this_page
-)paren
-op_ne
-id|head
-)paren
-suffix:semicolon
-r_return
-l_int|0
-suffix:semicolon
-)brace
-DECL|function|waitfor_one_page
-r_int
-id|waitfor_one_page
-c_func
-(paren
-r_struct
-id|page
-op_star
-id|page
-)paren
-(brace
-r_int
-id|error
-op_assign
-l_int|0
-suffix:semicolon
-r_struct
-id|buffer_head
-op_star
-id|bh
-comma
-op_star
-id|head
-op_assign
-id|page-&gt;buffers
-suffix:semicolon
-id|bh
-op_assign
-id|head
-suffix:semicolon
-r_do
-(brace
-id|wait_on_buffer
-c_func
-(paren
-id|bh
-)paren
-suffix:semicolon
-r_if
-c_cond
-(paren
-id|buffer_req
-c_func
-(paren
-id|bh
-)paren
-op_logical_and
-op_logical_neg
-id|buffer_uptodate
-c_func
-(paren
-id|bh
-)paren
-)paren
-id|error
-op_assign
-op_minus
-id|EIO
-suffix:semicolon
-)brace
-r_while
-c_loop
-(paren
-(paren
-id|bh
-op_assign
-id|bh-&gt;b_this_page
-)paren
-op_ne
-id|head
-)paren
-suffix:semicolon
-r_return
-id|error
-suffix:semicolon
-)brace
 DECL|function|do_buffer_fdatasync
 r_static
 r_int
